samples/_failures_safe/1761514224_8cff10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_921adaf2.c: In function ‘main’:
./samples/SAFE/__tmp_921adaf2.c:159:21: error: expected ‘;’ at end of input
  159 |     sm.current_state
      |                     ^
      |                     ;
./samples/SAFE/__tmp_921adaf2.c:159:5: error: expected declaration or statement at end of input
  159 |     sm.current_state
      |     ^~
